# RDFAnalyzerCore

./: .clang_format  .gitignore  .gitmodules  BUILD_FIX_SUMMARY.md  CHANGES_SUMMARY.md  CMakeLists.txt  CMakePresets.json  Doxyfile  IMPLEMENTATION_VERIFICATION.md  ONNX_IMPLEMENTATION.md  PRODUCTION_MANAGER_SUMMARY.md  PYTHON_BINDINGS_IMPLEMENTATION.md  README.md  YAML_IMPLEMENTATION_SUMMARY.md  build.sh  buildFast.sh  buildFull.sh  buildTest.sh  clean.sh  cleanBuild.sh  cleanTest.sh  env.sh  requirements-ci.txt  requirements-production.txt  test.sh  test_python_bindings.sh
analyses/CMSAnalysisTemplate/: CMakeLists.txt  README.md  analysis.cc  analysis_wrapper.py  cfg.yaml  cfg_mc.yaml  collections.yaml  floats.yaml  histograms.yaml  ints.yaml  triggers.yaml
analyses/CMS_Run2016_DoubleMuon/: CMakeLists.txt  README.md  analysis.cc  cfg.yaml  ci_cfg.yaml  dataset_manifest.yaml  fit_zpeak.py  floats.yaml  histograms.yaml  ints.yaml  output.yaml  triggers.yaml  zpeak_workspace.yaml
cmake/CombineHarvesterStandalone/: CMakeLists.txt
core/: CMakeLists.txt
core/bindings/: CMakeLists.txt  python_bindings.cpp  test_bindings.py
core/interface/: BDTManager.h  CMakeLists.txt  ColumnProjection.h  ConfigurationManager.h  CorrectionManager.h  CounterService.h  DataManager.h  DefaultLogger.h  LinkDef.h  ManagerFactory.h  ManagerRegistry.h  NDHistogramManager.h  NamedObjectManager.h  NullOutputSink.h  PhysicsObjectCollection.h  PlottingUtility.h  ProvenanceService.h  RDFColumnPacker.h  RootOutputSink.h  SystematicBundle.h  SystematicManager.h  TextConfigAdapter.h  TriggerManager.h  WorkingPointRecipe.h  YamlConfigAdapter.h  analyzer.h  configParser.h  functions.h  plots.h  plotsNew.h  systematics.h  util.h
core/interface/api/: IAnalysisService.h  IBDTManager.h  IConfigAdapter.h  IConfigurationProvider.h  IContextAware.h  ICorrectionManager.h  IDataFrameProvider.h  ILogger.h  INDHistogramManager.h  IOutputSink.h  IPluggableManager.h  ISystematicManager.h  ITriggerManager.h  ManagerContext.h
core/plugins/: CMakeLists.txt
core/plugins/BDTManager/: BDTManager.cc  BDTManager.h  CMakeLists.txt
core/plugins/CorrectedObjectCollectionManagers/: CMakeLists.txt  CorrectedObjectCollectionManagers.cc  CorrectedObjectCollectionManagers.h
core/plugins/CorrectionManager/: CMakeLists.txt  CorrectionManager.cc  CorrectionManager.h
core/plugins/CutflowManager/: CMakeLists.txt  CutflowManager.cc  CutflowManager.h
core/plugins/ElectronEnergyScaleManager/: CMakeLists.txt  ElectronEnergyScaleManager.cc  ElectronEnergyScaleManager.h
core/python/: convert_config.py  cpp_wrapper.py  create_datacards.py  dataset_manifest.py  derivation_correctionlib.py  example_datacard_config.yaml  example_dataset_manifest.yaml  generateSubmissionFilesNANO copy.py  generateSubmissionFilesNANO.py  generateSubmissionFilesOpenData.py  nuisance_groups.py  opendata_discovery.py  output_schema.py  production_manager.py  production_monitor.py  production_submit.py  reproducibility_report.py  resubmit_jobs.py  rucio_discovery.py  submission_backend copy.py  submission_backend.py  test_analysis_config_validation.py  test_cpp_wrapper.py  test_datacard_generator.py  test_dataset_manifest.py  test_generateSubmissionFilesNANO.py  test_nuisance_groups.py  test_output_schema.py  test_production_manager.py  test_reproducibility_report.py  test_submission_backend.py  test_uproot_datacard.py  test_validate_config.py  test_validation_report.py  test_variation_orchestrator.py  test_xrootd_site_selector.py  validate_config.py  validate_datacard_generator.py  validation_report.py  variation_orchestrator.py  (+2 more)
core/python/law/: README.md  (+20 more)
core/src/: BDTManager.cc  CMakeLists.txt  ConfigurationManager.cc  CorrectionManager.cc  CounterService.cc  DataManager.cc  ManagerFactory.cc  ManagerRegistry.cc  NDHistogramManager.cc  PlottingUtility.cc  ProvenanceService.cc  RootOutputSink.cc  SystematicBundle.cc  SystematicManager.cc  TextConfigAdapter.cc  TriggerManager.cc  YamlConfigAdapter.cc  analyzer.cc  configParser.cc  plots.cc  plugin_helpers.cc  systematics.cc  util.cc
core/test/: CMakeLists.txt  VerifyCombineConfig.cmake  VerifyCombineHarvesterConfig.cmake  correctionlibConfig  run_pytest.py.in  testAnalyzer_ManagerContextPersistence.cc  testAnalyzer_PluginWiring.cc  testAnalyzer_TriggerLogic.cc  testBDTManager.cc  testConfigurationManager.cc  testConfigurationManager_Basic.cc  testConfigurationManager_ConfigParsing.cc  testConfigurationManager_ErrorHandling.cc  testConfigurationManager_Immutability.cc  testConfigurationManager_MemoryAndSemantics.cc  testConfigurationManager_StringParsing.cc  testConfigurationManager_YamlParsing.cc  testCorrectedObjectCollectionManagers.cc  testCorrectionManager.cc  testCounterService.cc  testCounterService_Dedup.cc  testCutflowManager.cc  testDataManager.cc  testGoldenJsonManager.cc  testJetEnergyScaleManager.cc  testJetTaggingWorkingPointManager.cc  testKinematicFitManager.cc  testLeptonPhotonEnergyManagers.cc  testManagerRegistry.cc  testNDHistogramManager.cc  testNDHistogramManagerConfig.cc  testNamedObjectManager.cc  testOnnxManager.cc  testOnnxManagerGpu.cc  testPhysicsObjectCollection.cc  testPlots.cc  testPlottingUtility.cc  testPluginLifecycle.cc  testProvenanceService.cc  testRegionManager.cc  (+11 more)
core/tests/: CMakeLists.txt
law/: CMakeLists.txt  README.md  analysis_tasks.py  branch_map_policy.py  combine_tasks.py  dag_tasks.py  env.sh  failure_handler.py  framework.py  htcondor_bootstrap.sh  ingestion_utils.py  law.cfg  manifest_plot_tasks.py  merge_tasks.py  nano_tasks.py  opendata_tasks.py  partition_utils.py  plot_tasks.py  rucio_tasks.py  setup_python_env.sh  startJobManager.sh  submit_config.txt  tasks.py  test_analysis_tasks.py  test_branch_map_policy.py  test_combine_tasks.py  test_dag_tasks.py  test_executor_parity.py  test_failure_handler.py  test_merge_tasks.py  test_nano_tasks.py  test_opendata_tasks.py  test_performance_recorder.py  test_workflow_executors.py  test_xrdfs_tasks.py  workflow_executors.py  xrdfs_tasks.py
law/.law/: index
runners/: CMakeLists.txt  makePlots.cc  skim.cc
(+303 files in other folders)
